src/tests/errors/27_generic_member_on_unconstrained_t/source.z42
namespace Demo;

void F<T>(T a) {
    a.CompareTo(a);
}

void Main() { }
